# PicoPitchDetection

./: CMakeLists.txt  README.md  ex_output.txt  main.c  midi_device.c  midi_device.h  pico-example-midi.c  pico_sdk_import.cmake  pitch_analysis.c  pitch_analysis.h  usb_debug.c
debugger_python_scripts/: live_output_v2.py
